@@ -496,6 +496,8 @@ Some default configuration options have changed:
 * (bug 6296) Update to Indonesian localisation (id) #21
 * Introduce EditFormPreloadText hook, see docs/hooks.txt for more information
 * (bug 6095) Introduce RunUnknownJob hook, see docs/hooks.txt for more information
+* (bug 5865) Show warning when editing another users' user page and provide a link to edit
+  their talk page instead
 
 == Compatibility ==
 
